--- a/css/style.css
+++ b/css/style.css
@@ -390,3 +390,9 @@ textarea:hover {
 .footer h3 {
     font-size: 18px;
 }
+
+/* @media screen and (max-width: 600px) {
+    body {
+        background-color: red;
+    }
+} */
